src/parser/snapshots/ruasc__parser__tests__all_samples@assign_variable_and_trace.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/assign_variable_and_trace.as
---
Ok:
  expressions:
    - Declare:
        name: message
        value:
          Constant:
            String: Hello World
    - EVal:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                Identifier: message
