src/parser/snapshots/ruasc__parser__tests__all_samples@assign_variable_many_ways.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/assign_variable_many_ways.as
---
Ok:
  statements:
    - Declare:
        - name: message
          value:
            BinaryOperator:
              - Add
              - Constant:
                  String: Hello
              - Constant:
                  String: " "
    - Expr:
        BinaryOperator:
          - AddAssign
          - Constant:
              Identifier: message
          - Constant:
              String: World
    - Expr:
        BinaryOperator:
          - Assign
          - Constant:
              Identifier: message
          - BinaryOperator:
              - Add
              - Constant:
                  Identifier: message
              - Constant:
                  String: "!"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                Identifier: message
    - Declare:
        - name: a
          value:
            Constant:
              Integer: 1
        - name: b
          value: ~
        - name: c
          value:
            Constant:
              Integer: 3
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a: "
                - Constant:
                    Identifier: a
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "b: "
                - Constant:
                    Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "c: "
                - Constant:
                    Identifier: c
