src/parser/snapshots/ruasc__parser__tests__all_samples@block.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/block.as
---
Ok:
  statements:
    - Declare:
        - name: outside
          value:
            Constant:
              String: visible
    - Block:
        - Declare:
            - name: inside
              value:
                Constant:
                  String: visible
        - Expr:
            Call:
              name:
                Constant:
                  Identifier: trace
              args:
                - BinaryOperator:
                    - Add
                    - BinaryOperator:
                        - Add
                        - BinaryOperator:
                            - Add
                            - Constant:
                                String: "outside: "
                            - Constant:
                                Identifier: outside
                        - Constant:
                            String: ", inside: "
                    - Constant:
                        Identifier: inside
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - BinaryOperator:
                    - Add
                    - BinaryOperator:
                        - Add
                        - Constant:
                            String: "outside: "
                        - Constant:
                            Identifier: outside
                    - Constant:
                        String: ", inside: "
                - Constant:
                    Identifier: inside
