src/parser/snapshots/ruasc__parser__tests__all_samples@function.as.snap
---
source: src/parser/tests.rs
expression: parsed
input_file: samples/function.as
---
Ok:
  statements:
    - Expr:
        Function:
          name: test
          args: []
          body:
            - Expr:
                Call:
                  name:
                    Constant:
                      Identifier: trace
                  args:
                    - Constant:
                        String: Test called!
    - Expr:
        Call:
          name:
            Function:
              name: ~
              args:
                - a
                - b
              body:
                - Expr:
                    Call:
                      name:
                        Constant:
                          Identifier: trace
                      args:
                        - Constant:
                            String: Anonymous function called!
                - Expr:
                    Call:
                      name:
                        Constant:
                          Identifier: trace
                      args:
                        - BinaryOperator:
                            - Add
                            - BinaryOperator:
                                - Add
                                - BinaryOperator:
                                    - Add
                                    - Constant:
                                        String: "a = "
                                    - Constant:
                                        Identifier: a
                                - Constant:
                                    String: ", b = "
                            - Constant:
                                Identifier: b
          args:
            - Constant:
                String: aa
            - Constant:
                String: bb
